--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,29 @@ h2 {
 h3 {
     color: rgb(181, 106, 26);
 }
+h1  {
+    text-align: center;
+    width: 85%;
+}
+#menu-lateral {
+    float:left;
+    width: 7%;
+    padding:6px;
+    border:4px solid rgb(98, 68, 3);
+    background-color: white;
+}
+#menu-lateral li  {
+display: block;
+width:90%; 
+background-color: rgb(52, 193, 52);
+padding: 2px;
+border:4px solid rgb(255, 255, 255);
+}
 #textomarco {
     border:3px solid rgb(212, 207, 207);
     padding:12px;
+    float:left;
+    width: 83%;
+    background-color: rgb(217, 219, 218);
+    
 }
