--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h3 {
 }
 h1  {
     text-align: center;
-    width: 85%;
+    width: 80%;
 }
 #menu-lateral {
     float:left;
@@ -19,11 +19,14 @@ h1  {
     padding:6px;
     border:4px solid rgb(98, 68, 3);
     background-color: white;
+
 }
 #menu-lateral li  {
 display: block;
 width:90%; 
 background-color: rgb(52, 193, 52);
+background:linear-gradient(top, rgb(9, 162, 57), rgb(243, 243, 243));
+
 padding: 2px;
 border:4px solid rgb(255, 255, 255);
 }
@@ -31,7 +34,16 @@ border:4px solid rgb(255, 255, 255);
     border:3px solid rgb(212, 207, 207);
     padding:12px;
     float:left;
-    width: 83%;
-    background-color: rgb(217, 219, 218);
-    
+    width: 78%;
+    background-color: rgb(217, 219, 218);   
+}
+html {
+    border: 15px solid #919191;
+    border-radius:22px;
+    min-height: 100%;
+}
+#licencia {
+    position: left;
+    text-align: center;
+    float: center
 }
